# PyTgCallsDocs

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  docs.json  go.mod  go.sum  main.go  pyproject.toml
.github/: README.md
.github/scripts/: gen.py
config/: config.go
internal/bot/: bot.go
internal/bot/handlers/: handlers.go  time.go
internal/bot/utils/: shortcuts.go  utils.go
internal/docs/: search.go  search_test.go
scripts/generate/: main.go
src/: __init__.py  __main__.py  _config.py
src/core/: search.py
src/modules/: _format.py  _github.py  inline.py  search.py  start.py
