[project]
name = "pytgcallsdocs"
version = "0.1.0"
description = "PyTgCalls Documentation Bot"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "pytdbot[tdjson]>=0.9.8.post1",
    "python-dotenv>=1.2.1",
]

[project.scripts]
start = "src.__main__:main"

[tool.uv]
package = true

[tool.setuptools]
packages = [
    "src",
]
